fix vertical toolbar alignment

--- a/src/components/Toolbar/toolbar.scss
+++ b/src/components/Toolbar/toolbar.scss
@@ -26,7 +26,7 @@
 
     .#{$eccgui}-toolbar--vertical > & {
         flex-direction: column;
-        align-items: center;
+        align-items: stretch;
     }
 }
 
